# wifi-radar

./: .gitignore  README.md
backend/: ap_status.sh  check_lines.sh  probe_oui.py  probe_oui2.py  probe_ports.py  pyproject.toml  test_serial.py
backend/app/: api.py  config.py  event_bus.py  firmware_flash.py  main.py  oui.py  persistence.py  presence.py  serial_reader.py  serial_writer.py  state.py  system_stats.py  ws.py
firmware/: CMakeLists.txt  build_test.sh  flash_sid.sh  sdkconfig.defaults
firmware/main/: CMakeLists.txt  Kconfig.projbuild  radar_main.c
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: CSIWaterfall.tsx  CalibrationPanel.tsx  ConfigPanel.tsx  DeviceDetail.tsx  DeviceList.tsx  FirmwarePanel.tsx  HistoryPanel.tsx  LayersPanel.tsx  PresencePanel.tsx  Scene3D.tsx  SensorDiagnostics.tsx  StatsBar.tsx  SystemPanel.tsx  TrilaterationDebug.tsx  ViewToolbar.tsx
frontend/src/lib/: colors.ts  trilaterationDebug.ts  types.ts  useDraggable.ts  useThrottled.ts  ws.ts
frontend/src/store/: index.ts
frontend/src/three/: CSIField.tsx  DeviceOrbit.tsx  Floor.tsx  HeatmapFloor.tsx  MotionTrail.tsx  PresenceBlob.tsx  PresencePeaks.tsx  RangeRings.tsx  RssiVectors.tsx  SelectedDeviceTrail.tsx  Sensor.tsx  SensorDraggable.tsx  SensorNode.tsx
