[project]
name = "wifi-radar-backend"
version = "0.1.0"
description = "WiFi radar backend — parses ESP32 sniff/CSI stream, serves WebSocket + REST + static frontend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pyserial>=3.5",
    "pyserial-asyncio-fast>=0.16",
    "duckdb>=1.1",
    "pyarrow>=18",
    "mac-vendor-lookup>=0.1.12",
    "pydantic>=2.10",
    # Needed by FastAPI's UploadFile/File for multipart firmware uploads.
    "python-multipart>=0.0.9",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
